# ReinforcementLearning4MeshGeneration

./: LICENSE  config  main.py  main_simple.py  pyproject.toml  readme  readme.md  report.md  requirements
Measurement/: analysis.py  meshformat_convector.py  quality_verdict.py
elements/test_run/: final_mesh.json
general/: EBRD.py  FNN_evaluation.py  components.py  data.py  data_augmentation.py  figures.py  mesh.py  meshtest.py  original_ann.py  pattern.txt  plotting.py  polygon.py  post_processing.py  samples.out  sym_env.py
logs/: sac_basic1_gpu_training.npz  sac_basic1_training_run.npz
models/test_run/: ebrd_model.json  model_info.json
results/: pipeline_summary.json
rl/: boundary_env.py  experiment_plot.py  plotting.py  utils.py
rl/baselines/: CustomizeA2C.py  CustomizeCallback.py  MeshCanvas.py  RL_Mesh.py  RL_tuning.py  dummy_vec_env.py  evaluation.txt  evaluation_repli.txt  plotting.py  test1.py  testbed.py  tflogs_processing.py
samples/test_run/: training_samples.json
ui/: GenerateRandomPolygon.py  density.py  engineering_shapes.py  gui.py  source_file_formating.py  tk-ui.py
ui/domains/: boundary10.json.txt  boundary11.json.txt  boundary12.json.txt  boundary13.json.txt  boundary14.json.txt  boundary15.json.txt  boundary16.json.txt  boundary4.json.txt  boundary5.json.txt  boundary6.json.txt  boundary7.json.txt  boundary8.json.txt  boundary9.json.txt  boundary_hole.json.txt  boundary_hole_r2-2.json.txt  boundary_hole_r2.json.txt  engeer.json.txt  fat2.json.txt  random1_1.json.txt  test1.json.txt  test2.json.txt  test3.json.txt  tool2.json.txt  (+1 more)
(+1 files in other folders)
